Add new commands and expand API for player/server info
Introduces several new built-in commands (Alert, AlertRaw, Find, Hub, LeaveQueue, Ping, Plist, ProxyAlias, QueueAdmin, SlashServer, Transfer) to the proxy. Adds PlayerInfo and ServerInfoForwardingMode to the API, and TabCompleteRequestEvent for improved command handling. Updates and refactors command, event, and configuration classes to support new features and improve extensibility.