@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2021-2023 Velocity Contributors
+ * Copyright (C) 2018-2025 Velocity Contributors
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -19,11 +19,15 @@ package com.velocitypowered.proxy.command;
 
 import com.google.common.base.Preconditions;
 import com.mojang.brigadier.CommandDispatcher;
+import com.mojang.brigadier.arguments.StringArgumentType;
 import com.mojang.brigadier.builder.LiteralArgumentBuilder;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.context.CommandContextBuilder;
 import com.mojang.brigadier.context.ParsedArgument;
 import com.mojang.brigadier.context.ParsedCommandNode;
+import com.mojang.brigadier.suggestion.SuggestionProvider;
+import com.mojang.brigadier.suggestion.Suggestions;
+import com.mojang.brigadier.suggestion.SuggestionsBuilder;
 import com.mojang.brigadier.tree.ArgumentCommandNode;
 import com.mojang.brigadier.tree.CommandNode;
 import com.mojang.brigadier.tree.LiteralCommandNode;
@@ -32,11 +36,28 @@ import com.velocitypowered.api.command.Command;
 import com.velocitypowered.api.command.CommandManager;
 import com.velocitypowered.api.command.CommandSource;
 import com.velocitypowered.api.command.InvocableCommand;
+import com.velocitypowered.api.permission.Tristate;
+import com.velocitypowered.api.proxy.Player;
+import com.velocitypowered.api.proxy.ProxyServer;
+import com.velocitypowered.api.proxy.server.RegisteredServer;
+import com.velocitypowered.proxy.VelocityServer;
 import com.velocitypowered.proxy.command.brigadier.VelocityArgumentCommandNode;
 import com.velocitypowered.proxy.command.brigadier.VelocityBrigadierCommandWrapper;
+import com.velocitypowered.proxy.command.builtin.CommandMessages;
+import com.velocitypowered.proxy.config.VelocityConfiguration;
+import com.velocitypowered.proxy.redis.multiproxy.RemotePlayerInfo;
+import com.velocitypowered.proxy.server.VelocityRegisteredServer;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.minimessage.translation.Argument;
 import org.checkerframework.checker.nullness.qual.Nullable;
 
 /**
@@ -45,8 +66,6 @@ import org.checkerframework.checker.nullness.qual.Nullable;
  * and arguments command nodes, which is contained in this class.
  */
 public final class VelocityCommands {
-
-  // Wrapping
 
   /**
    * Walks the command node tree and wraps all {@link Command} instances in a {@link VelocityBrigadierCommandWrapper},
@@ -58,7 +77,7 @@ public final class VelocityCommands {
    * @return the wrapped command node
    */
   public static CommandNode<CommandSource> wrap(final CommandNode<CommandSource> delegate,
-      final @Nullable Object registrant) {
+                                                final @Nullable Object registrant) {
     Preconditions.checkNotNull(delegate, "delegate");
     if (registrant == null) {
       // the registrant is null if the `plugin` was absent when we try to register the command
@@ -71,35 +90,33 @@ public final class VelocityCommands {
     }
 
     if (delegate instanceof LiteralCommandNode<CommandSource> lcn) {
-      var literalBuilder = shallowCopyAsBuilder(lcn, delegate.getName(), true);
-      literalBuilder.executes(maybeCommand);
-      // we also need to wrap any children
-      for (final CommandNode<CommandSource> child : delegate.getChildren()) {
-        literalBuilder.then(wrap(child, registrant));
-      }
-      if (delegate.getRedirect() != null) {
-        literalBuilder.redirect(wrap(delegate.getRedirect(), registrant));
-      }
-      return literalBuilder.build();
+        var literalBuilder = shallowCopyAsBuilder(lcn, delegate.getName(), true);
+        literalBuilder.executes(maybeCommand);
+        // we also need to wrap any children
+        for (final CommandNode<CommandSource> child : delegate.getChildren()) {
+          literalBuilder.then(wrap(child, registrant));
+        }
+        if (delegate.getRedirect() != null) {
+          literalBuilder.redirect(wrap(delegate.getRedirect(), registrant));
+        }
+        return literalBuilder.build();
     } else if (delegate instanceof VelocityArgumentCommandNode<CommandSource, ?> vacn) {
-      return vacn.withCommand(maybeCommand)
-          .withRedirect(delegate.getRedirect() != null ? wrap(delegate.getRedirect(), registrant) : null);
-    } else if (delegate instanceof ArgumentCommandNode) {
-      var argBuilder = delegate.createBuilder().executes(maybeCommand);
-      // we also need to wrap any children
-      for (final CommandNode<CommandSource> child : delegate.getChildren()) {
-        argBuilder.then(wrap(child, registrant));
-      }
-      if (delegate.getRedirect() != null) {
-        argBuilder.redirect(wrap(delegate.getRedirect(), registrant));
-      }
-      return argBuilder.build();
+        return vacn.withCommand(maybeCommand)
+              .withRedirect(delegate.getRedirect() != null ? wrap(delegate.getRedirect(), registrant) : null);
+    } else if (delegate instanceof ArgumentCommandNode<CommandSource, ?> node) {
+        var argBuilder = node.createBuilder().executes(maybeCommand);
+        // we also need to wrap any children
+        for (final CommandNode<CommandSource> child : delegate.getChildren()) {
+          argBuilder.then(wrap(child, registrant));
+        }
+        if (delegate.getRedirect() != null) {
+          argBuilder.redirect(wrap(delegate.getRedirect(), registrant));
+        }
+        return argBuilder.build();
     } else {
-      throw new IllegalArgumentException("Unsupported node type: " + delegate.getClass());
+        throw new IllegalArgumentException("Unsupported node type: " + delegate.getClass());
     }
   }
-
-  // Normalization
 
   /**
    * Normalizes the given command input.
@@ -120,8 +137,6 @@ public final class VelocityCommands {
     }
   }
 
-  // Parsing
-
   /**
    * Returns the parsed alias, used to execute the command.
    *
@@ -133,9 +148,16 @@ public final class VelocityCommands {
     if (nodes.isEmpty()) {
       throw new IllegalArgumentException("Cannot read alias from empty node list");
     }
-    return nodes.get(0).getNode().getName();
+
+    return nodes.getFirst().getNode().getName();
   }
 
+  /**
+   * The fixed name assigned to the arguments node of an {@link InvocableCommand}.
+   *
+   * <p>This name is used internally to distinguish the argument-handling node
+   * from hinting nodes and other literals in the command graph.</p>
+   */
   public static final String ARGS_NODE_NAME = "arguments";
 
   /**
@@ -145,13 +167,13 @@ public final class VelocityCommands {
    * @param arguments the map of parsed arguments, as returned by
    *                  {@link CommandContext#getArguments()} or
    *                  {@link CommandContextBuilder#getArguments()}
-   * @param type      the type class of the arguments
-   * @param fallback  the value to return if no arguments were provided
-   * @param <V>       the type of the arguments
+   * @param type the type class of the arguments
+   * @param fallback the value to return if no arguments were provided
+   * @param <V> the type of the arguments
    * @return the command arguments
    */
   public static <V> V readArguments(final Map<String, ? extends ParsedArgument<?, ?>> arguments,
-      final Class<V> type, final V fallback) {
+                                    final Class<V> type, final V fallback) {
     final ParsedArgument<?, ?> argument = arguments.get(ARGS_NODE_NAME);
     if (argument == null) {
       return fallback; // either no arguments were given or this isn't an InvocableCommand
@@ -188,8 +210,7 @@ public final class VelocityCommands {
    * @param newName  the name of the returned literal node
    * @return a copy of the literal with the given name
    */
-  public static LiteralCommandNode<CommandSource> shallowCopy(
-      final LiteralCommandNode<CommandSource> original, final String newName) {
+  public static LiteralCommandNode<CommandSource> shallowCopy(final LiteralCommandNode<CommandSource> original, final String newName) {
     return shallowCopy(original, newName, original.getCommand());
   }
 
@@ -201,9 +222,8 @@ public final class VelocityCommands {
    * @param newCommand the new command to set on the copied node
    * @return a copy of the literal with the given name
    */
-  private static LiteralCommandNode<CommandSource> shallowCopy(
-      final LiteralCommandNode<CommandSource> original, final String newName,
-      final com.mojang.brigadier.Command<CommandSource> newCommand) {
+  private static LiteralCommandNode<CommandSource> shallowCopy(final LiteralCommandNode<CommandSource> original, final String newName,
+                                                               final com.mojang.brigadier.Command<CommandSource> newCommand) {
     return shallowCopyAsBuilder(original, newName, false).executes(newCommand).build();
   }
 
@@ -211,16 +231,16 @@ public final class VelocityCommands {
    * Creates a copy of the given literal with the specified name.
    *
    * @param original the literal node to copy
-   * @param newName  the name of the returned literal node
+   * @param newName the name of the returned literal node
+   * @param skipChildren if {@code true}, the copied node will not include children of the original
    * @return a copy of the literal with the given name
    */
-  private static LiteralArgumentBuilder<CommandSource> shallowCopyAsBuilder(
-      final LiteralCommandNode<CommandSource> original, final String newName,
-      final boolean skipChildren) {
+  private static LiteralArgumentBuilder<CommandSource> shallowCopyAsBuilder(final LiteralCommandNode<CommandSource> original, final String newName,
+                                                                            final boolean skipChildren) {
     // Brigadier resolves the redirect of a node if further input can be parsed.
     // Let <bar> be a literal node having a redirect to a <foo> literal. Then,
     // the context returned by CommandDispatcher#parseNodes when given the input
-    // string "<bar> " does not contain a child context with <foo> as its root node.
+    // string "<bar>" does not contain a child context with <foo> as its root node.
     // Thus, the vanilla client asks the children of <bar> for suggestions, instead
     // of those of <foo> (https://github.com/Mojang/brigadier/issues/46).
     // Perform a shallow copy of the literal instead.
@@ -237,33 +257,34 @@ public final class VelocityCommands {
         builder.then(child);
       }
     }
+
     return builder;
   }
 
   // Arguments node
 
   /**
-   * Returns the arguments node for the command represented by the given alias node, if present;
+   * Returns the argument's node for the command represented by the given alias node, if present;
    * otherwise returns {@code null}.
    *
    * @param alias the alias node
    * @param <S>   the type of the command source
-   * @return the arguments node, or null if not present
+   * @return the argument's node, or null if not present
    */
-  static <S> @Nullable VelocityArgumentCommandNode<S, ?> getArgumentsNode(
-      final LiteralCommandNode<S> alias) {
+  static <S> @Nullable VelocityArgumentCommandNode<S, ?> getArgumentsNode(final LiteralCommandNode<S> alias) {
     final CommandNode<S> node = alias.getChild(ARGS_NODE_NAME);
     if (node instanceof VelocityArgumentCommandNode) {
       return (VelocityArgumentCommandNode<S, ?>) node;
     }
+
     return null;
   }
 
   /**
-   * Returns whether the given node is an arguments node.
+   * Returns whether the given node is an argument's node.
    *
    * @param node the node to check
-   * @return true if the node is an arguments node; false otherwise
+   * @return true if the node is an argument's node; false otherwise
    */
   public static boolean isArgumentsNode(final CommandNode<?> node) {
     return node instanceof VelocityArgumentCommandNode && node.getName().equals(ARGS_NODE_NAME);
@@ -271,5 +292,202 @@ public final class VelocityCommands {
 
   private VelocityCommands() {
     throw new AssertionError();
+  }
+
+  /**
+   * Gets a player from a command argument named {@code player}.
+   *
+   * @param server the proxy server
+   * @param ctx the command context
+   * @return the found player, or {@code null} if the player couldn't be found
+   */
+  public static Player getPlayer(final VelocityServer server, final CommandContext<CommandSource> ctx) {
+    String playerName = ctx.getArgument("player", String.class);
+    Optional<Player> playerOptional = server.getPlayer(playerName);
+
+    if (playerOptional.isEmpty()) {
+      ctx.getSource().sendMessage(CommandMessages.PLAYER_NOT_FOUND
+          .arguments(Argument.string("player", playerName)));
+      return null;
+    }
+
+    return playerOptional.get();
+  }
+
+  /**
+   * Generates a suggestion provider to complete the name of a server.
+   *
+   * @param server the proxy server
+   * @param argName the name of the string argument to complete
+   * @param allowNonQueueable whether to suggest a server if the server has queueing disabled
+   * @return a suggestion provider that completes a server name
+   */
+  public static SuggestionProvider<CommandSource> suggestServer(final VelocityServer server, final String argName,
+                                                                final boolean allowNonQueueable) {
+    return (ctx, builder) -> {
+      boolean allowNonQueueable0 = allowNonQueueable;
+      final String argument = ctx.getArguments().containsKey(argName)
+          ? StringArgumentType.getString(ctx, argName)
+          : "";
+
+      VelocityConfiguration.Queue queueConfig = server.getConfiguration().getQueue();
+
+      if (!queueConfig.isEnabled()) {
+        allowNonQueueable0 = true;
+      }
+
+      for (final RegisteredServer sv : server.getAllServers()) {
+        final String serverName = sv.getServerInfo().getName();
+        if (!allowNonQueueable0 && queueConfig.getNoQueueServers().contains(serverName)) {
+          continue;
+        }
+
+        if (serverName.regionMatches(true, 0, argument, 0, argument.length())) {
+          if (ctx.getSource().getPermissionValue("velocity.command.server." + serverName) != Tristate.FALSE) {
+            builder.suggest(serverName);
+          }
+        }
+      }
+
+      return builder.buildFuture();
+    };
+  }
+
+  /**
+   * Fetches a server from a string in a command context.
+   *
+   * @param server the proxy instance
+   * @param ctx the command context
+   * @param argName the name of the argument
+   * @param allowNonQueueable whether to return a servers if it can't be queued.
+   * @return the found server, or {@code null} if one couldn't be found
+   */
+  public static VelocityRegisteredServer getServer(final VelocityServer server, final CommandContext<CommandSource> ctx,
+                                                   final String argName, final boolean allowNonQueueable) {
+    String serverName = ctx.getArgument(argName, String.class);
+    Optional<RegisteredServer> serverOptional = server.getServer(serverName);
+
+    if (serverOptional.isEmpty()) {
+      ctx.getSource().sendMessage(CommandMessages.SERVER_DOES_NOT_EXIST
+          .arguments(Argument.string("server", serverName)));
+      return null;
+    }
+
+    VelocityRegisteredServer registeredServer = (VelocityRegisteredServer) serverOptional.get();
+
+    if (!checkServerPermissions(registeredServer, ctx.getSource())) {
+      ctx.getSource().sendMessage(CommandMessages.SERVER_DOES_NOT_EXIST
+          .arguments(Argument.string("server", serverName)));
+      return null;
+    }
+
+    if (!allowNonQueueable && !registeredServer.getQueueStatus().hasQueue()) {
+      ctx.getSource().sendMessage(Component.translatable("velocity.queue.error.server-has-no-queue")
+          .arguments(Argument.string("server", serverName)));
+      return null;
+    }
+
+    return registeredServer;
+  }
+
+  /**
+   * Checks if a command source has permission to join a server.
+   *
+   * @param server the server to check against
+   * @param source the command source to be checked
+   * @return whether the command source has permission to join
+   */
+  public static boolean checkServerPermissions(final RegisteredServer server, final CommandSource source) {
+    String serverName = server.getServerInfo().getName();
+    return source.getPermissionValue("velocity.command.server." + serverName) != Tristate.FALSE;
+  }
+
+  /**
+   * Emits usage text for the given command name to the source of the given command context.
+   *
+   * @param ctx the command context to send usage to
+   * @param commandName the command name
+   * @return {@code Command.SINGLE_SUCCESS} to allow using in expression-style {@code .executes} lambdas.
+   */
+  public static int emitUsage(final CommandContext<CommandSource> ctx, final String commandName) {
+    String usedName = commandName;
+    ParsedCommandNode<?> node = ctx.getNodes().getFirst();
+
+    if (node != null) {
+      usedName = node.getNode().getName();
+    }
+
+    ctx.getSource().sendMessage(
+        Component.translatable("velocity.command." + commandName + ".usage", NamedTextColor.YELLOW)
+            .arguments(Argument.string("command", usedName)));
+    return com.mojang.brigadier.Command.SINGLE_SUCCESS;
+  }
+
+  /**
+   * Suggests the name of a connected proxy.
+   *
+   * @param server the proxy server instance
+   * @param context the context passed to the {@code suggests} callback
+   * @param builder the builder passed to the {@code builder} callback
+   * @return a future that resolves to the suggestions
+   */
+  public static CompletableFuture<Suggestions> suggestProxy(final VelocityServer server, final CommandContext<CommandSource> context,
+                                                            final SuggestionsBuilder builder) {
+    final String argument = context.getArguments().containsKey("proxy")
+        ? context.getArgument("proxy", String.class)
+        : "";
+    for (String proxyId : server.getMultiProxyHandler().getAllProxyIds()) {
+      if (proxyId.toLowerCase().regionMatches(true, 0, argument.toLowerCase(), 0, argument.length())) {
+        builder.suggest(proxyId);
+      }
+    }
+
+    return builder.buildFuture();
+  }
+
+  /**
+   * Suggests the name of an online player.
+   *
+   * @param server the proxy server instance
+   * @param ctx the context passed to the {@code suggests} callback
+   * @param builder the builder passed to the {@code builder} callback
+   * @param includeRemote whether to include remote (cross-proxy) players from Redis
+   * @return a future that resolves to the suggestions
+   */
+  public static CompletableFuture<Suggestions> suggestPlayer(final VelocityServer server, final CommandContext<CommandSource> ctx,
+                                                             final SuggestionsBuilder builder, final boolean includeRemote) {
+    final String argument = ctx.getArguments().containsKey("player")
+        ? ctx.getArgument("player", String.class)
+        : "";
+    if (includeRemote && server.getMultiProxyHandler().isRedisEnabled()) {
+      for (RemotePlayerInfo info : server.getMultiProxyHandler().getAllPlayers()) {
+        if (info.getName().regionMatches(true, 0, argument, 0, argument.length())) {
+          builder.suggest(info.getName());
+        }
+      }
+
+      return builder.buildFuture();
+    }
+
+    for (final Player player : server.getAllPlayers()) {
+      final String playerName = player.getUsername();
+      if (playerName.regionMatches(true, 0, argument, 0, argument.length())) {
+        builder.suggest(playerName);
+      }
+    }
+
+    return builder.buildFuture();
+  }
+
+  /**
+   * Returns the server list sorted by name.
+   *
+   * @param proxy the proxy server instance
+   * @return a list of all registered servers, sorted by name
+   */
+  public static List<RegisteredServer> sortedServerList(final ProxyServer proxy) {
+    List<RegisteredServer> servers = new ArrayList<>(proxy.getAllServers());
+    servers.sort(Comparator.comparing(RegisteredServer::getServerInfo));
+    return Collections.unmodifiableList(servers);
   }
 }
